Update ActivitySpec — add periodsReplaced, resolvedMinutes(), slotsReplaced()